--- a/main.html
+++ b/main.html
@@ -7,7 +7,17 @@
 
   <body>
     <!-- write the body here -->
-
+	<form id="my-form">
+	  <label for="age">Age:
+	  <input id="age" type="number" required>
+	  </label>
+	  <br>
+	  <label for="name" style ="display:block; margin-top:10px;">Name:
+		  <input id="name" type="text" required>
+	  </label>
+	  <br>
+	  <button id="btn" type="submit">Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
